spacing fixed and spelling

--- a/css/main.css
+++ b/css/main.css
@@ -194,8 +194,8 @@ form {
 }
 
 .big-space {
-  margin-top: 10rem;
-  margin-bottom: 10rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .sign-up {
@@ -304,6 +304,11 @@ td {
     width: 100%;
   }
 
+  .big-space {
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
@@ -336,6 +341,11 @@ td {
     left: 0;
     color: #fff;
     width: 100%;
+  }
+
+  .big-space {
+    margin-top: 8rem;
+    margin-bottom: 8rem;
   }
 
 }
