--- a/css/modules.css
+++ b/css/modules.css
@@ -970,11 +970,11 @@ button,
   display: inline-block;
   margin: 0;
   overflow: visible;
-  padding: .375em .75em .42em;
+  padding: .5em 1em;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  border-radius: 3px;
+  border-radius: 12px;
   border: 3px solid #89c214;
   color: #89c214;
   font: inherit;
